--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ main .services{
     margin-top: 45px;
     background-image: url(https://bellaria.cwsthemes.com/wp-content/uploads/2017/12/674906526.jpg?id=254);
     height: 670px;
+   
     opacity: 0.85;
     --mask:
     radial-gradient(54.12px at 50% 75.90px,#000 99%,#0000 101%) calc(50% - 66px) 0/132px 100%,
@@ -154,4 +155,63 @@ main .services{
 main .services article{
     width: 100%;
     height: 100%;
+}
+.services .card{
+    max-width: 270px;
+    background: transparent;
+    align-items: center;
+    border: none;
+
+}
+
+.services article{
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+.services article a{
+    position: absolute;
+    bottom: 50px;
+    text-decoration: none;
+}
+.services article button{
+    background: transparent;
+    border: none;
+}
+.services article .cardbody{
+    width: 80%;
+    margin: auto;
+    align-items: center;
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.services .card svg:nth-child(2){
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    fill: white;
+    top: 30px;
+}
+
+.services .card .card-body{
+    color: #fff;
+    text-align: center;
+}
+.recipes{
+    position: relative;
+    height: 1000px;
+    background-image: url(https://bellaria.cwsthemes.com/wp-content/uploads/2017/12/bg_med.jpg?id=490);
+    object-fit: cover;
+    
+}
+.recipes section{
+    width: 90%;
+    color: rebeccapurple;
+    margin: 20px auto;
+    text-align: center;
+}
+.recipes section #carouselExampleControlsNoTouching{
+    margin-top: 60px;
 }
